--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="432427730834-ud1uddff7fjio02478n0mp050sfimhds.apps.googleusercontent.com">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="./styles.css">
   <script src="https://apis.google.com/js/platform.js?onload=renderButton"></script>
   <!-- Font Awesome -->
   <link rel="stylesheet" href="./assets/plugins/fontawesome-free/css/all.min.css">
@@ -38,6 +39,6 @@
   <script src="./assets/dist/js/adminlte.min.js"></script>
   <!-- chartjs -->
 
-<script src="runtime.8452aaf59fdcc9964b97.js" defer></script><script src="polyfills.8c151b8375e767ff858f.js" defer></script><script src="main.ec939af409f164846908.js" defer></script></body>
+<script src="runtime.2d81bd66f11a2f2a6e2d.js" defer></script><script src="polyfills.8c151b8375e767ff858f.js" defer></script><script src="main.6c6ea34d74034ced3371.js" defer></script></body>
 
 </html>
